Finished Theme Provider.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -12,7 +12,7 @@
   "arabic": "العربيه",
   "english": "الانجليزيه",
   "light": "نهاري",
-  "theme": "Theme",
+  "theme": "مظهر",
   "create_event": "انشاء حدث",
   "book_club": "نادي الكتب",
   "title": "العنوان",
