UI Login and Register Screen finished.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -38,7 +38,7 @@
   "name": "الاسم",
   "re_pass": "اعاده كلمه السر",
   "create_acc": "انشاء حساب",
-  "already_have_acc": "بالفعل لديك حساب؟تسجيل الدخول",
+  "already_have_acc": "بالفعل لديك حساب؟",
   "rest_pass": "إعادة تعيين كلمة المرور",
   "personalize_your_exp": "إضفاء الطابع الشخصي على تجربتك",
   "choose_your_preferred": "اختر الموضوع واللغة المفضلين لديك لتبدأ بتجربة مريحة ومصممة خصيصًا لتناسب ذوقك.",
