--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -32,13 +32,13 @@
   "forget_pass": "Forget Password?",
   "login": "Login",
   "logout": "Logout",
-  "dont_have_acc": "Don’t Have Account ? Create Account",
+  "dont_have_acc": "Don’t Have Account?",
   "or": "Or",
   "login_with_google": "Login With Google",
   "name": "Name",
   "re_pass": "Re Password",
   "create_acc": "Create Account",
-  "already_have_acc": "Already Have Account ? Login",
+  "already_have_acc": "Already Have Account?",
   "rest_pass": "Reset Password",
   "personalize_your_exp": "Personalize Your Experience",
   "choose_your_preferred": "Choose your preferred theme and language to get started with a comfortable, tailored experience that suits your style.",
