UI Create Event Screen finished.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -22,6 +22,7 @@
   "event_date": "تاريخ الحدث",
   "event_time": "وقت الحدث",
   "choose_date": "اختار التاريخ",
+   "choose_time": "اختر الوقت",
   "location": "الموقع",
   "choose_event_location": "اختر موقع الحدث",
   "add_event": "اضافه حدث",
