--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -22,6 +22,7 @@
   "event_date": "Event Date",
   "event_time": "Event Time",
   "choose_date": "Choose Date",
+  "choose_time": "Choose Time",
   "location": "Location",
   "choose_event_location": "Choose Event Location",
   "add_event": "Add Event",
